# hubbardml

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
experiments/: analyse.py  config.yaml  dataset_analysis.ipynb  extract_olivines.ipynb  hubbard_u_olivines.json  mno2.py  mno2.yaml  olivines.py  olivines.yaml  olivines_analysis.ipynb  predict_iterations.py  predict_iterations.yaml  predict_iterations_analysis.ipynb  prepare_data.py  run.py  utils.py
experiments/experiment/: predict_final.py  predict_final.yaml  predict_final_no_in_param.yaml  predict_from_first_iter.py  predict_from_first_iter.yaml  predict_hp.py  predict_hp.yaml  train.yaml
experiments/model/: u.yaml  v.yaml
hubbardml/: __init__.py  cli.py  datasets.py  engines.py  graphdata.py  graphs.py  keys.py  light.py  models.py  parse_pw.py  plots.py  projects.py  provides.py  qe.py  similarities.py  sites.py  training.py  utils.py  version.py
notebooks/: Equivariant+U.ipynb  Equivariant+UV.ipynb  Equivariant+V.ipynb  analysis.ipynb  data_analysis.ipynb  pw_parsing.ipynb
tests/: __init__.py  conftest.py  test_engines.py  test_models.py  test_qe.py  test_training.py  ylmr2.f90
