[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "hubbardml"
dynamic = ["version"]
description = "Equivariant machine learning library for learning from electronic structures."
authors = [{ name = "Martin Uhrin", email = "martin.uhrin.10@ucl.ac.uk" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Topic :: Scientific/Engineering"
]
keywords = ["machine learning", "equivariant", "electronic structure"]
requires-python = ">=3.7"
dependencies = [
    "ase",
    "e3nn>=0.5.1",
    "e3psi~=0.3",
    "hydra-core",
    "matplotlib",
    "mincepy[sci]",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "torch>=2.0",
    "odfpy"  # So that we can save dataframes into ods format
]
[project.optional-dependencies]
dev = [
    'black[d]',
    "flake8",
    'flit',
    'pre-commit',
    'pytest',
]
[project.entry-points."mincepy.plugins.types"]
"hubbardml" = "hubbardml.provides:get_mincepy_types"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | (.*)/migrations
    | dist
  )/
)
'''
[tool.commitizen]
tag_format = "v$major.$minor.$patch"

[tool.bandit]
exclude_dirs = ["tests"]
